--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
   <title>Momentum app</title>
 </head>
   <body>
-    <div id="login-form">
-      <input type="text" placeholder="What is your name?">
-      <button>Log In</button>
-    </div>
+    <form id="login-form">
+      <input
+      required 
+      maxlength="15"
+       type="text" 
+       placeholder="What is your name?">
+      <!-- required : input의 기본 필수 입력 항목 옵션 -->
+      <!-- <button>Log In</button> -->
+      <input type="submit" value="Log In">
+    </form>
+    <h1 id="greeting" class="hidden"></h1>
     <script src="app.js"></script>
   </body>
 </html>
