--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       <input type="submit" value="Log In">
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <script src="app.js"></script>
+    <script src="./js/greeting.js"></script>
   </body>
 </html>
